refactor: add better styling

--- a/src/components/button/Button.module.css
+++ b/src/components/button/Button.module.css
@@ -5,6 +5,22 @@
 .container button {
     border: none;
     padding: 0.5rem;
-    border-radius: 3px;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    border-radius: 25px;
     font-size: 24px;
+    background: var(--blue);
+    color: white;
+    font-weight: 500;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.container button:hover {
+    cursor: pointer;
+    background: #4d21cf;
+}
+
+.container button:disabled {
+    cursor: default;
+    opacity: 50%;
 }
