--- a/src/components/image-upload-card/ImageUploadCard.module.css
+++ b/src/components/image-upload-card/ImageUploadCard.module.css
@@ -1,19 +1,23 @@
 .container {
     width: 70%;
-    height: 40%;
-    border-radius: 10px;
-    background: var(--white);
+    height: 50%;
+    min-height: 200px;
+    border-radius: 50px;
+    border: 1px solid var(--white);
+    /*background: var(--white);*/
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: black;
+    /*color: black;*/
     max-width: 500px;
 }
 
+
 .preview {
-    height: 70px;
-    width: 70px;
+    padding-top: 20px;
+    height: 95px;
+    width: 95px;
 }
 
 .preview img {
@@ -24,13 +28,29 @@
 }
 
 .drop-image {
-    color: grey;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     font-size: 24px;
     font-weight: 700;
 }
 
+.drop-image img {
+    height: 100px;
+    width: 100px;
+}
+
 .add-image {
-    color: grey;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     font-size: 24px;
     font-weight: 700;
+}
+
+.add-image img {
+    height: 100px;
+    width: 100px;
 }
