--- a/src/components/input-field/InputField.module.css
+++ b/src/components/input-field/InputField.module.css
@@ -1,9 +1,15 @@
 .container {
     width: 100%;
+    display: flex;
+    justify-content: start;
+    padding: 1.5rem;
+    border-radius: 5px;
 }
 
 .container input {
+    width: 100%;
     border-radius: 5px;
     padding:0.5rem;
     border: none;
+    font-size: 24px;
 }
