--- a/src/components/nav-bar/NavBar.module.css
+++ b/src/components/nav-bar/NavBar.module.css
@@ -1,5 +1,10 @@
 .nav-container {
-    background: #0761ff;
+    background: var(--dark-grey);
+    background-image: url("../../assets/images/neotek-banner.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center top;
+    overflow: hidden;
     height: 11vh;
     position: sticky;
     top:0;
@@ -8,13 +13,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    box-sizing: content-box;
 }
 
 .logo {
     height: 100px;
     width: 110px;
-    padding: 10px;
-    margin-right: 3rem;
+    padding: 0px;
     /*background: red;*/
 }
 
