--- a/src/components/phrase-card/PhraseCard.module.css
+++ b/src/components/phrase-card/PhraseCard.module.css
@@ -1,20 +1,28 @@
 .container {
     width: 70%;
     height: 200px;
-    border-radius: 10px;
-    border: 5px solid var(--white);
+    border: 1px solid var(--white);
+    border-radius: 25px;
+    padding: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
     max-width: 500px;
 }
 
 .header {
     width: 100%;
+    display: flex;
+    justify-content: start;
+    margin-bottom: 0;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    box-sizing: border-box;
     /*background: red;*/
 }
 
 .field {
     width: 100%;
+    display: flex;
 }
