--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -4,7 +4,12 @@
     justify-content: center;
     height: 89vh;
     width: 100vw;
-    background: #262629;
+    background: var(--dark-grey);
+    overflow: hidden;
+}
+
+.center {
+    width: 5%;
 }
 
 .left {
@@ -12,6 +17,16 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    height: 100%;
+    width: 100%;
+}
+
+.add-btn {
+    height: 120px;
+    width: 120px;
+}
+
+.add-btn img {
     height: 100%;
     width: 100%;
 }
